--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "A shadowsocks manager tool for multi user and traffic control.",
   "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "start": "node server.js",
     "build": "gulp",
     "prepare": "gulp",
     "prepublishOnly": "gulp",
     "check": "eslint .",
-    "fix": "eslint . --fix"
+    "fix": "eslint . --fix",
+    "audit": "npm audit",
+    "audit-fix": "npm audit fix"
   },
   "author": "Gu Yuteng <igyteng@gmail.com>",
   "license": "GPL-3.0",
@@ -20,56 +26,55 @@
     "gfw"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.14.1",
-    "ajv": "^6.12.6",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "del": "^3.0.0",
-    "eslint": "^5.16.0",
-    "gulp": "^4.0.2",
+    "@babel/cli": "^7.24.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "ajv": "^8.12.0",
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "babel-loader": "^9.1.3",
+    "del": "^7.1.0",
+    "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "webpack-stream": "^6.1.2"
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
     "alipay-ftof": "0.1.5",
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "commander": "^2.20.3",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.2",
+    "commander": "^12.1.0",
     "compression": "^1.7.4",
-    "connect-session-knex": "^1.7.3",
+    "connect-session-knex": "^5.0.0",
     "cors": "^2.8.5",
-    "ejs": "^2.7.4",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "express-validator": "^5.3.1",
-    "form-data": "^4.0.0",
-    "fs-extra": "^7.0.1",
-    "inquirer": "^6.5.2",
-    "ioredis": "^4.27.2",
-    "js-yaml": "^3.14.1",
-    "knex": "0.20.9",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
+    "express-rate-limit": "^7.4.1",
+    "form-data": "^4.0.1",
+    "fs-extra": "^11.2.0",
+    "helmet": "^8.0.0",
+    "inquirer": "^12.3.0",
+    "ioredis": "^5.4.1",
+    "js-yaml": "^4.1.0",
+    "knex": "^3.1.0",
     "later": "^1.2.0",
     "lodash": "^4.17.21",
-    "log4js": "^4.5.1",
-    "moment": "^2.29.1",
-    "mysql": "^2.18.1",
-    "nodemailer": "^6.6.0",
+    "log4js": "^6.9.1",
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.5",
+    "nodemailer": "^6.9.16",
     "oauth-1.0a": "^2.2.6",
     "paypal-rest-sdk": "^1.8.1",
     "qr-image": "^3.2.0",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "simple-get": "^3.1.0",
-    "socks": "^2.6.1",
-    "sqlite3": "^5.0.0",
-    "uuid": "^3.4.0",
-    "web-push": "^3.4.4",
-    "ws": "^6.2.1"
+    "simple-get": "^4.0.1",
+    "socks": "^2.8.3",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.0.3",
+    "web-push": "^3.6.7",
+    "ws": "^8.18.0"
   },
   "repository": {
     "type": "git",
