--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "check": "eslint .",
     "fix": "eslint . --fix",
     "audit": "npm audit",
-    "audit-fix": "npm audit fix"
+    "audit-fix": "npm audit fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "Gu Yuteng <igyteng@gmail.com>",
   "license": "GPL-3.0",
@@ -29,19 +32,22 @@
     "@babel/cli": "^7.24.0",
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
-    "ajv": "^8.12.0",
     "@eslint/js": "^9.0.0",
-    "eslint": "^9.0.0",
+    "@types/jest": "^30.0.0",
+    "ajv": "^8.12.0",
     "babel-loader": "^9.1.3",
     "del": "^7.1.0",
+    "eslint": "^9.0.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "alipay-ftof": "0.1.5",
+    "alipay-sdk": "^4.14.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.2",
     "commander": "^12.1.0",
@@ -49,10 +55,11 @@
     "connect-session-knex": "^5.0.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.10",
+    "exit-x": "^0.2.2",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
-    "express-rate-limit": "^7.4.1",
     "form-data": "^4.0.1",
     "fs-extra": "^11.2.0",
     "helmet": "^8.0.0",
